--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -40,41 +40,58 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/etfirst_name"
-            android:layout_width="60dp"
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="First name"
-            android:drawableRight="@drawable/ic_account_box_black_24dp"
-            android:drawableEnd="@drawable/ic_account_box_black_24dp"
-            android:padding="11dp"
-            android:textSize="15sp"
-            android:textColor="#fff"
-            android:layout_marginHorizontal="0dp"
-            android:layout_marginTop="30dp"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/loginbuttons"/>
-        <EditText
-            android:id="@+id/etlast_name"
-            android:layout_width="62dp"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_account_box_black_24dp"
-            android:drawableRight="@drawable/ic_account_box_black_24dp"
-            android:drawableEnd="@drawable/ic_account_box_black_24dp"
-            android:hint="Last name"
-            android:background="@drawable/loginbuttons"
-            android:padding="11dp"
-            android:textSize="15sp"
-            android:textColor="#F7F9FD"
-            android:layout_weight="1"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="4dp"
-            android:singleLine="true"/>
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/tvInvalidFirstMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*First Name is Mandatory"
+                android:textColor="@color/Red"
+                android:gravity="bottom"
+                android:textStyle="bold|italic"
+                android:visibility="gone"/>
+            <EditText
+                android:id="@+id/etfirst_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="First name"
+                android:drawableRight="@drawable/ic_account_box_black_24dp"
+                android:drawableEnd="@drawable/ic_account_box_black_24dp"
+                android:padding="11dp"
+                android:textSize="15sp"
+                android:textColor="#fff"
+                android:layout_marginHorizontal="0dp"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/loginbuttons"/>
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <EditText
+                android:id="@+id/etlast_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:drawableLeft="@drawable/ic_account_box_black_24dp"
+                android:drawableRight="@drawable/ic_account_box_black_24dp"
+                android:drawableEnd="@drawable/ic_account_box_black_24dp"
+                android:hint="Last name"
+                android:background="@drawable/loginbuttons"
+                android:padding="11dp"
+                android:textSize="15sp"
+                android:textColor="#F7F9FD"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="4dp"
+                android:singleLine="true"/>
+        </RelativeLayout>
     </LinearLayout>
 
         <Spinner
@@ -100,40 +117,48 @@
                 android:textStyle="bold|italic"
                 android:visibility="gone"
                />
-        <EditText
-            android:id="@+id/etemail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            <EditText
+                android:id="@+id/etemail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/loginbuttons"
+                android:textColor="#fff"
+                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:drawableEnd="@drawable/ic_email_black_24dp"
+                android:drawableRight="@drawable/ic_email_black_24dp"
+                android:hint="E-mail"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionDone"
+                android:padding="10dp"
+                android:textSize="15sp"
+                android:singleLine="true"/>
+            <TextView
+                android:id="@+id/tvPassEmptyMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="*Password is Mandatory"
+                android:textColor="@color/Red"
+                android:gravity="bottom"
+                android:textStyle="bold|italic"
+                android:visibility="gone"/>
+            <EditText
+                android:id="@+id/etPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
+                android:drawableRight="@drawable/ic_lock_black_24dp"
+                android:drawableEnd="@drawable/ic_lock_black_24dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Password"
+                android:background="@drawable/loginbuttons"
+                android:padding="10dp"
+                android:textSize="15sp"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:imeOptions="actionDone"/>
 
-            android:background="@drawable/loginbuttons"
-            android:textColor="#fff"
-            android:drawableLeft="@drawable/ic_email_black_24dp"
-            android:drawableEnd="@drawable/ic_email_black_24dp"
-            android:drawableRight="@drawable/ic_email_black_24dp"
-            android:hint="E-mail"
-            android:inputType="textEmailAddress"
-            android:imeOptions="actionDone"
-            android:padding="10dp"
-            android:textSize="15sp"
-            android:singleLine="true"/>
-        <EditText
-            android:id="@+id/etPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:drawableRight="@drawable/ic_lock_black_24dp"
-            android:drawableEnd="@drawable/ic_lock_black_24dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:hint="Password"
-            android:background="@drawable/loginbuttons"
-            android:padding="10dp"
-            android:textSize="15sp"
-            android:singleLine="true"
-
-            android:inputType="textPassword"
-            android:imeOptions="actionDone"/>
             <TextView
                 android:id="@+id/tvInvalidConfirm"
                 android:layout_width="match_parent"
@@ -142,42 +167,40 @@
                 android:textColor="@color/Red"
                 android:gravity="bottom"
                 android:textStyle="bold|italic"
-                android:visibility="gone"
-                />
-        <EditText
-            android:id="@+id/etconfirm_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:drawableRight="@drawable/ic_lock_black_24dp"
-            android:drawableEnd="@drawable/ic_lock_black_24dp"
-
-            android:hint="Confirm Password"
-            android:background="@drawable/loginbuttons"
-            android:padding="10dp"
-            android:textSize="15sp"
-            android:singleLine="true"
-            android:inputType="textPassword"
-            android:imeOptions="actionDone"/>
-            <RelativeLayout
+                android:visibility="gone"/>
+            <EditText
+                android:id="@+id/etconfirm_password"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent">
-                <Button
-                    android:id="@+id/bNext"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/signupbutton"
-                    android:text="Next"
-                    android:textAllCaps="false"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:textColor="#fff"
-                    android:textSize="20sp" />
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
+                android:drawableRight="@drawable/ic_lock_black_24dp"
+                android:drawableEnd="@drawable/ic_lock_black_24dp"
+                android:hint="Confirm Password"
+                android:background="@drawable/loginbuttons"
+                android:padding="10dp"
+                android:textSize="15sp"
+                android:singleLine="true"
+                android:inputType="textPassword"
+                android:imeOptions="actionDone"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent">
+                    <Button
+                        android:id="@+id/bNext"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/signupbutton"
+                        android:text="Next"
+                        android:textAllCaps="false"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="#fff"
+                        android:textSize="20sp" />
+                </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
