logic is nearly done and validations are left

--- a/app/src/main/res/layout/gym__congrats.xml
+++ b/app/src/main/res/layout/gym__congrats.xml
@@ -53,6 +53,7 @@
             android:layout_marginLeft="87dp"
             android:layout_marginTop="3dp" />
         <TextView
+            android:id="@+id/tvTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -72,6 +73,7 @@
             android:padding="2dp" />
 
         <TextView
+            android:id="@+id/tvDistance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -91,6 +93,7 @@
             android:padding="2dp" />
 
         <TextView
+            android:id="@+id/tvSpeed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
