--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -15,7 +15,7 @@
         android:fontFamily="cursive"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:background="#0E439C"
+        android:background="#C74B74"
         android:padding="20dp" />
 
     <ScrollView
