--- a/app/src/main/res/layout/chartfragment.xml
+++ b/app/src/main/res/layout/chartfragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ChartFragment"
     android:orientation="vertical"
-    android:background="@color/lightPink">
+    android:background="@color/veryLightPink">
 
     <TextView
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/LineChart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentTop="true"
         android:minHeight="250dp"
