--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -24,7 +24,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewPage"
                     android:layout_width="fill_parent"
-                    android:layout_height="250dp" />
+                    android:layout_height="300dp" />
 
                 <LinearLayout
                     android:id="@+id/dots"
@@ -70,7 +70,8 @@
                 android:background="@mipmap/orimage"
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="15sp"/>
+                android:layout_marginTop="15sp"
+                android:visibility="gone"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +83,8 @@
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textSize="15dp"
-                android:padding="13dp"/>
+                android:padding="13dp"
+                android:visibility="invisible"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +94,8 @@
                 android:drawableLeft="@mipmap/facebook"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textSize="15dp"/>
+                android:textSize="15dp"
+                android:visibility="invisible"/>
 
 
             <!--
