--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".fragment.MeFragment"
     android:orientation="vertical"
     android:background="@color/whiteText">
@@ -14,8 +14,8 @@
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:maxHeight="200dp"
-        android:background="@mipmap/profilebackground"
-        android:src="@mipmap/profilepic" />
+        android:background="@mipmap/profilepicture"
+        android:src="@mipmap/girlbackgroundfinal" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -69,10 +69,11 @@
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,8 +81,8 @@
                 android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:text="Name :"
                 android:textSize="16dp"
@@ -119,7 +120,7 @@
                     android:layout_weight="0.4"
                     android:padding="10dp"
                     android:layout_gravity="left"
-                    android:backgroundTint="@color/colorAccent"/>
+                    android:backgroundTint="#fff"/>
             </LinearLayout>
 
             <LinearLayout
@@ -263,7 +264,8 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:textColor="@color/whiteText"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </ScrollView>
