--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -21,8 +21,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="216dp"
-        android:layout_height="173dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="18sp"
         android:src="@mipmap/profilepic"/>
@@ -35,6 +35,7 @@
         android:textColor="#9C9595"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:layout_marginBottom="20dp"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -105,6 +106,7 @@
             android:padding="7dp"
             android:singleLine="true"
             android:textSize="15sp"
+            style="@style/mySpinner"
             android:entries="@array/Gender"
             />
             <TextView
@@ -188,7 +190,7 @@
                     android:layout_height="fill_parent">
                     <Button
                         android:id="@+id/bNext"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_alignParentBottom="true"
@@ -198,6 +200,8 @@
                         android:textAllCaps="false"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
                         android:textColor="#fff"
                         android:textSize="20sp" />
                 </RelativeLayout>
