--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="LightBlue">#5BA0E9</color>
     <color name="Red">#FF0000</color>
     <color name="black_overlay">#66000000</color>
-
+    <color name="veryLightPink">#F8D6E2</color>
     <color name="periodDayBackground">#e57373</color>
     <color name="fertileDayBackground">#2e7d32</color>
     <color name="ovulationDayBackground">#512da8</color>
