--- a/app/src/main/res/layout/dialog_weight_picker.xml
+++ b/app/src/main/res/layout/dialog_weight_picker.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pick Your weighth "
+            android:text="Pick Your weight "
             android:textSize="20sp"
             android:textColor="@color/colorAccent"
             android:textAlignment="center"
