--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -59,6 +59,7 @@
                 android:background="@drawable/signupbutton"
                 android:layout_marginLeft="40sp"
                 android:layout_marginRight="40sp"
+                android:layout_marginTop="30dp"
                 android:padding="10dp"
                 android:text="Sign Up "
                 android:textAllCaps="false"
