--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center"
         android:maxHeight="200dp"
         android:background="@mipmap/profilepicture"
-        android:src="@mipmap/girlbackgroundfinal" />
+        android:src="@mipmap/girlfinal" />
 
     <LinearLayout
         android:layout_width="match_parent"
