--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -92,19 +92,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="#80FFFFFF">
-                <LinearLayout
+                android:background="#80FFFFFF"
+                android:gravity="center">
+               <!-- <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_gravity="center_horizontal">
+                    android:layout_gravity="center_horizontal">-->
                 <RadioButton
                     android:id="@+id/rbtnStayFit"
                     android:layout_width="wrap_content"
                     android:layout_height="37dp"
                     android:buttonTint="@drawable/radiobtncolor"
                     android:padding="5dp"
-                    android:text="  Stay Fit "
+                    android:text="  Stay Fit         "
                     android:textColor="#065B4F"
                     android:textSize="20sp"/>
 
@@ -127,7 +128,7 @@
                     android:text="  Weight Gain "
                     android:textColor="#065B4F"
                     android:textSize="20sp" />
-                </LinearLayout>
+                <!--</LinearLayout>-->
             </RadioGroup>
         </LinearLayout>
 
@@ -156,14 +157,15 @@
                 android:id="@+id/RGperiod"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:orientation="vertical"
-                android:background="#80FFFFFF" >
-                <LinearLayout
+                android:background="#80FFFFFF"
+                android:layout_gravity="center"
+                android:gravity="center">
+                <!--<LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_gravity="center_horizontal">
+                    android:layout_gravity="center_horizontal">-->
                 <RadioButton
                     android:id="@+id/rbtnTryingToConceive"
                     android:layout_width="233dp"
@@ -175,13 +177,13 @@
 
                 <RadioButton
                     android:id="@+id/rbtnRegularTracker"
-                    android:layout_width="match_parent"
+                    android:layout_width="233dp"
                     android:layout_height="37dp"
                     android:buttonTint="@drawable/radiobtn2color"
                     android:text="  Regular Tracker"
                     android:textColor="#D10A4E"
                     android:textSize="20sp" />
-                </LinearLayout>
+               <!-- </LinearLayout>-->
             </RadioGroup>
         </LinearLayout>
     </LinearLayout>
