--- a/app/src/main/res/menu/periodnavbar.xml
+++ b/app/src/main/res/menu/periodnavbar.xml
@@ -15,7 +15,7 @@
         app:showAsAction="never"/>
     <item
         android:id="@+id/llMe"
-        android:icon="@mipmap/girlprofilefinal"
+        android:icon="@mipmap/girlfinal"
         android:title="Me"
         android:enabled="true"
         app:showAsAction="never"></item>
